--- a/server/package.json
+++ b/server/package.json
@@ -81,6 +81,7 @@
     "morgan": "^1.10.1",
     "nocache": "^4.0.0",
     "nodemon": "^3.1.11",
+    "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
     "tsx": "^4.21.0",
     "winston": "^3.19.0"
