--- a/server/package.json
+++ b/server/package.json
@@ -78,6 +78,7 @@
     "jsonwebtoken": "^9.0.3",
     "jwk-to-pem": "^2.0.7",
     "jwks-rsa": "^3.2.0",
+    "mongoose": "^9.1.3",
     "morgan": "^1.10.1",
     "nocache": "^4.0.0",
     "nodemon": "^3.1.11",
