--- a/server/package.json
+++ b/server/package.json
@@ -18,28 +18,21 @@
   },
   "scripts": {
     "prebuild": "pnpm run clean:build",
-    "build": "pnpm run prisma:generate && pkgroll",
+    "build": "pkgroll",
     "start": "cross-env FORCE_COLOR=2 node ./dist/index.cjs",
-    "dev": "pnpm run prisma:generate && cross-env NODE_ENV=development tsx watch src/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx watch src/index.ts",
     "prod": "pnpm run build && pnpm run start",
     "clean": "rm -rf node_modules coverage dist .nyc_output",
     "clean:build": "rm -rf dist",
     "lint": "eslint --ignore-path .eslintignore ./ --ext .ts,.js",
     "lint:fix": "eslint --ignore-path .eslintignore ./ --fix --ext .ts,.js",
     "format": "prettier --ignore-path .prettierignore --write \"**/*.+(ts|js)\"",
-    "prisma:generate": "npx prisma generate",
-    "prisma:migrate": "npx prisma migrate dev --name init",
-    "prisma:seed": "npx prisma db seed",
-    "prisma:studio": "npx prisma studio",
     "check:types": "tsc --noEmit",
     "commit": "git-cz",
     "test": "jest",
     "test:e2e": "jest -c jest.config.e2e.ts",
     "test:integration": "jest -c jest.config.integration.ts",
     "test:unit": "jest -c jest.config.unit.ts --detectOpenHandles"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
   },
   "config": {
     "commitizen": {
@@ -55,13 +48,12 @@
     "NodeJS",
     "TypeScript",
     "express",
-    "prisma",
+    "mongoose",
     "freelance",
     "marketplace"
   ],
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^6.19.1",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.1",
@@ -123,7 +115,6 @@
     "node-notifier": "^10.0.1",
     "pkgroll": "^2.21.4",
     "prettier": "^3.7.4",
-    "prisma": "^6.19.1",
     "ts-jest": "^29.4.6",
     "ts-jest-mock-import-meta": "^1.3.1",
     "typescript": "^5.9.3"
