--- a/client/.dockerignore
+++ b/client/.dockerignore
@@ -1,17 +1,13 @@
 node_modules
 dist
-.git
-.gitignore
-.dockerignore
-.vscode
-.cursorrules
-.tanstack
-README.md
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+build
+npm-debug.log
+yarn-error.log
+pnpm-debug.log
 .env
-.env.local
-.env.*.local
+.env.*
+.git
+.vscode
+.DS_Store
+coverage
+.nyc_output
