--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
-NODE_ENV=
-PORT=
+NODE_ENV=development
+PORT=8000
 APP_BASE_URL=http://localhost
 DATABASE_URL= #mongourl
 CLIENT_URL=http://localhost:3000 #client url for  cors issue handling
