--- a/server/package.json
+++ b/server/package.json
@@ -66,6 +66,7 @@
     "express": "^5.2.1",
     "express-jsdoc-swagger": "^1.8.0",
     "express-jwt": "^8.5.1",
+    "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "jwk-to-pem": "^2.0.7",
